crates/omega_app/src/snapshots/omega_app__operation__tests__fs_remove_success.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<file_removed
  path="/home/user/file_to_delete.txt"
  status="completed"
>
</file_removed>
