crates/omega_app/src/snapshots/omega_app__operation__tests__fs_search_files_with_matches_mode.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="256000"
  total_lines="2"
  display_lines="1-2"
  pattern="test"
><![CDATA[file1.rs
file2.rs]]>
</search_results>
