crates/omega_app/src/snapshots/omega_app__operation__tests__fs_search_no_results.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  pattern="NonExistentPattern"
>
</search_results>
